# config-ini

./: CMakeLists.txt  README.md
include/config/ini/: parser.hpp
src/: ini_parser.cpp
test/: test_parser.cpp
